# RTMN-Services

./: .dockerignore  .env.example  .env.production  .gitignore  .gitmodules  ACN-ARCHITECTURE.md  AI-TRAINING-REQUIREMENTS.md  ALL-INDUSTRY-PROCUREMENT-FLOW.md  API-DOCUMENTATION.md  API-KEY-MANAGEMENT.md  API.md  ARCHITECTURE-AS-BUILT.md  ARCHITECTURE-AUDIT.md  AUDIT-AI-LAYER.md  AUDIT-SALES-INTEGRATION.md  AUDIT-SUMMARY-2026-06-22.md  BILLING.md  CANONICAL-PORT-REGISTRY.md  CASE-STUDY-TEMPLATE.md  CHANGELOG.md  CLAUDE.md  CLIENT-ONBOARDING.md  CODE_OF_CONDUCT.md  COMPLETE-AUDIT.md  CONSOLIDATED-AUDIT-REPORT-2026-06-21.md  CONTEXT.md  CONTRIBUTING.md  COOKIES.md  CORPPERKS-AUDIT.md  CUSTOMER-JOURNEY-SARAH.md  CUSTOMER-ONBOARDING.md  Caddyfile  DEMO-CLIENT-ACME-RETAIL.md  DEMO-SCRIPT.md  DEPLOY-CLOUD.md  DEPLOY-CRM-STACK.md  DEPLOY-FULL.md  DEPLOYMENT-GUIDE.md  DEPLOYMENT.md  DOCUMENTATION-INDEX.md  (+121 more)
agent-economy/: FEATURES.md  README.md  package.json
agent-twin/: CLAUDE.md  FEATURES.md  package-lock.json  package.json
agriculture-os/: package-lock.json  package.json
api/: index.js  package.json
area-twin/: CLAUDE.md  FEATURES.md  README.md  package-lock.json  package.json
automotive-os/: CLAUDE.md  FEATURES.md  package-lock.json  package.json
b2b-test/: README.md  hojai.ai.md  package.json
beauty-os/: CLAUDE.md  FEATURES.md  package-lock.json
buyer-twin/: FEATURES.md  package.json
companies/HOJAI-AI/products/genie/genie-os/sdk/python/: README.md  pyproject.toml
companies/HOJAI-AI/products/genie/genie-os/sdk/python/src/genie_client/: __init__.py  client.py  models.py
companies/HOJAI-AI/products/genie/genie-os/sdk/python/tests/: test_genie_client.py
services/agent-sdk/sdk/python/: pyproject.toml
(+20202 files in other folders)
