[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hojai-agent-sdk"
version = "1.0.0"
description = "Python SDK for building HOJAI AI agents"
requires-python = ">=3.8"
authors = [{name = "HOJAI AI Team"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["hojai_agent*"]